cmake_minimum_required(VERSION 3.16)

project(honor-of-hero VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC OFF)
set(CMAKE_AUTOMOC OFF)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdiagnostics-color=never")

file(GLOB_RECURSE PROJECT_RESOURCE_FILES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/res/*"
)

configure_file(
    ${CMAKE_CURRENT_SOURCE_DIR}/assetpaths.h.in
    ${CMAKE_CURRENT_BINARY_DIR}/generated/assetpaths.h
    @ONLY
)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Multimedia MultimediaWidgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Multimedia MultimediaWidgets)

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
        mainwindow.h
        skilliconwidget.cpp
        skilliconwidget.h
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(honor-of-hero
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET honor-of-hero APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(honor-of-hero SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(honor-of-hero
            ${PROJECT_SOURCES}
            config.h
            hero.h hero.cpp
            bullet.h bullet.cpp
            bullet3.h bullet3.cpp
            bullet4.h bullet4.cpp
            bullet5.h bullet5.cpp
            bullet6.h bullet6.cpp
            bullet7.h bullet7.cpp
            bullet8.h bullet8.cpp
            bullet9.h bullet9.cpp
            bullet10.h bullet10.cpp
            bullet11.h bullet11.cpp
            bullet12.h bullet12.cpp
            bullet13.h bullet13.cpp
            bullet14.h bullet14.cpp
            bullet15.h bullet15.cpp
            bullet16.h bullet16.cpp
            boomerangbullet.h boomerangbullet.cpp
            skill2bullet.h skill2bullet.cpp
            crystal.h crystal.cpp
            tower.h tower.cpp
            enemy.h enemy.cpp
            dragonenemy.h dragonenemy.cpp
            boss2enemy.h boss2enemy.cpp
            dragontornadobullet.h dragontornadobullet.cpp
            pet.h pet.cpp
        )
    endif()
endif()

target_include_directories(honor-of-hero PRIVATE
    ${CMAKE_CURRENT_BINARY_DIR}/generated
)

if(PROJECT_RESOURCE_FILES)
    set_source_files_properties(${PROJECT_RESOURCE_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
    target_sources(honor-of-hero PRIVATE ${PROJECT_RESOURCE_FILES})
    source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" PREFIX "Resources" FILES ${PROJECT_RESOURCE_FILES})
endif()

target_link_libraries(honor-of-hero PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Multimedia
    Qt${QT_VERSION_MAJOR}::MultimediaWidgets
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.honor-of-hero)
endif()
set_target_properties(honor-of-hero PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS honor-of-hero
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(honor-of-hero)
endif()
